coordinator endpoint is now /job/{job_id}
